# ros-repo-4

./: .gitignore  README.md
AI_Server/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
AI_Server/install/ai_server/share/ai_server/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
AI_Server/log/: latest_build
AI_Server/src/ai_server/: Dockerfile  setup.py
AI_Server/src/ai_server/ai_server/: ai_main.py  ai_main_2.py  data_handle.py  detection_data.json  display_result.py  result_publisher.py  test1.py
GUI/: README.md  db_test.py  main.py  robot_state.ui  window1.ui  window2.ui
MFC_Control/: BLUTOOTH.ino  esp32_master.ino
MFC_Control/arduino_slave_1/: arduino_slave_1.ino
MFC_Control/arduino_slave_2/: arduino_slave_2.ino
MFC_Control/esp32_master/: esp32_master.ino
MFC_Control/esp32_slave_3/: esp32_slave_3.ino
MFC_Robot/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh
MFC_Robot/install/aruco_detector_pkg/share/aruco_detector_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
MFC_Robot/install/minibot_bringup/share/minibot_bringup/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
MFC_Robot/install/minibot_controllers/share/minibot_controllers/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
MFC_Robot/log/: latest_build
MFC_Robot/src/aruco_detector_pkg/aruco_detector_pkg/: aruco_pose_estimate.py
MFC_Robot/src/aruco_detector_pkg/calib_data/: MultiMatrix_mk.npz  MultiMatrix_ys.npz
MFC_Robot/src/aruco_detector_pkg/calibration/: camera_calibration.py  capture_calivration_images.py
MFC_Robot/src/aruco_detector_pkg/distance_estimate/: distance.py
MFC_Robot/src/lrobot/: package.xml  setup.py
MFC_Robot/src/lrobot/launch/: jps_path_planner_launch.py  path_server_launch.py  robot_controller_launch.py  robot_drive_launch.py  robot_launch.py
MFC_Robot/src/lrobot/lrobot/: a_star.py  jps.py  jps_path_planner.py  path_server.py  robot_control.py  robot_controller.py  robot_drive.py  robot_drive_own.py  robot_drive_testing.py  robot_state_action_client_node.py  target_pose_publisher.py
MFC_Robot/src/lrobot/maps/: mfc.pgm  mfc_map.yaml  mfl.pgm  mfl.yaml
MFC_Robot/src/minibot_bringup/config/: v4l2_camera_params.yaml
MFC_Robot/src/minibot_interfaces/: CMakeLists.txt  package.xml
MFC_Robot/src/minibot_interfaces/msg/: GoalPose.msg
MFC_Robot/src/minibot_navigation2/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
MFC_Robot/src/minibot_navigation2/launch/: bringup_launch.py  navigation_launch.py
MFC_Robot/src/minibot_navigation2/log/: latest_build
MFC_Robot/src/minibot_navigation2/maps/: map_hg.yaml  mfc.yaml  mfc_map.yaml
MFC_Robot/src/minibot_navigation2/params/: nav2_params.yaml
MFC_Robot/src/robot_manage_pkg/: package.xml  setup.py
MFC_Robot/src/robot_manage_pkg/robot_manage_pkg/: bridge_test.py  recieve_result_state.py  tf_test.py
MFC_Robot/src/sensor_sender_pkg/: setup.py
MFC_Robot/src/sensor_sender_pkg/sensor_sender_pkg/: dsa.py  sensor_sender.py  sensor_sender_node.py
docker/: Dockerfile  README.md
main_control_server/: README.md
main_control_server/config/: bridge_config.yaml
main_control_server/install/: local_setup.sh  setup.sh
main_control_server/log/: latest_build
main_control_server/params/: db_user_info.yaml
main_control_server/src/main_control_server_bringup/: CMakeLists.txt  package.xml
main_control_server/src/main_control_server_bringup/launch/: bringup_main_control_server.py
main_control_server/src/main_server_gui/: CMakeLists.txt  package.xml
main_control_server/src/main_server_gui/src/: __init__.py  connect.py  gui_node.py  main_server_gui.py  main_server_gui_og.py  resources.qrc  resources_rc.py  robotstatewindow.py  signinwindow.py
main_control_server/src/main_server_gui/src/modules/: connect.py  mainwindow.py  node.py  robotstatewindow.py  signinwindow.py  test.py
main_control_server/src/main_server_gui/ui/: main_window.ui  robot_state.ui  window2.ui
main_control_server/src/network_manager/: CMakeLists.txt  package.xml  setup.py
main_control_server/src/network_manager/launch/: communication_launch.py
main_control_server/src/network_manager/src/: communication_MFC_arduino.py  communication_robot_node.py
main_control_server/src/network_manager/src/modules/: esp32_master.py  find_ip.py  settings.yaml
main_control_server/src/robot_state/: CMakeLists.txt  package.xml  setup.py
main_control_server/src/robot_state/action/: RobotTask.action
main_control_server/src/robot_state/launch/: robot_state_manager_launch.py
main_control_server/src/robot_state/maps/: map_hg.pgm
main_control_server/src/robot_state/msg/: AllTaskDone.msg  GoalStatus.msg  RackList.msg  TaskProgressUpdate.msg
main_control_server/src/robot_state/src/: a_star.py  path_server.py  robot_state_manager_node.py  robot_task_client.py  robot_task_server.py  robotgoal.py  robotgoal_test.py  test_amcl_subscriber.py
main_control_server/src/robot_state/src/data/: location_data.py
main_control_server/src/robot_state/src/modules/: connect.py
main_control_server/src/robot_state/srv/: UpdateDB.srv
main_control_server/src/task_allocator/: CMakeLists.txt  package.xml
main_control_server/src/task_allocator/src/: task_allocator_node.py
main_control_server/src/task_manager/: CMakeLists.txt  package.xml
main_control_server/src/task_manager/launch/: task_manager_launch.py
main_control_server/src/task_manager/msg/: GuiUpdate.msg  InspectionComplete.msg  RackStatusUpdate.msg  SendAllocationResults.msg  SendLightOnResults.msg  StartInspection.msg
main_control_server/src/task_manager/src/: order_list.py  task_manager_node.py
main_control_server/src/task_manager/src/module/: order_grouping.py
main_control_server/src/task_manager/src/modules/: order_grouping.py  order_list.py
main_control_server/src/task_manager/srv/: AllocatorTask.srv
maps/: mfc_map.pgm
scripts/: launch_map.sh  launch_robot.sh  robot_drive.sh
(+413 files in other folders)
