<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>main_server_gui</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="6648kmk@gmail.com">min</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>network_manager</depend>
  <depend>robot_state</depend>
  <build_depend>task_manager</build_depend>
  <exec_depend>task_manager</exec_depend>

  <depend>ament_index_python</depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>

  <build_depend>ament_cmake_python</build_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
